--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,7 +84,7 @@ android {
             versionName = VERSION_NAME
             resValue "string", "app_name", "Tarrakki"
             manifestPlaceholders = [
-                    appIcon       : "@mipmap/ic_launcher",
+                    appIcon       : "@drawable/tarrakki_app_logo",
                     appIconRounded: "@mipmap/ic_launcher_round"
             ]
         }
